<?xml version="1.0"?>
<!-- Copyright (c) 2014, Konstantinos Chatzilygeroudis
All rights reserved.

Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:

1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.

2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer
  in the documentation and/or other materials provided with the distribution.

3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived
  from this software without specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING,
BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT
SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
<package format="3">>
  <name>roboticsgroup_upatras_gazebo_plugins</name>
  <version>2.0.0</version>
  <description>Collection of gazebo plugins</description>

  <author email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</author>
  <maintainer email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</maintainer>
  <maintainer email="nlamprian@gmail.com">Nick Lamprianidis</maintainer>
  <maintainer email="fedor@quasi.ai">Nick Lamprianidis</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/quasi-robotics/roboticsgroup_upatras_gazebo_plugins</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>control_toolbox</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib" />
  </export>
</package>
